...
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_primary"
                android:fontFamily="sans-serif"
                android:gravity="bottom"
                android:hint="@string/email"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input_view"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_primary"
                android:fontFamily="sans-serif"
                android:gravity="bottom"
                android:hint="@string/password"
...
            android:drawableEnd="@drawable/ic_lock"
            app:layout_constraintBottom_toBottomOf="@+id/password_input_view"
            app:layout_constraintEnd_toEndOf="@+id/password_input_view"
            app:layout_constraintTop_toTopOf="@+id/password_input_view" />

        <TextView
            android:id="@+id/error_login"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="sans-serif"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="@dimen/text_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input_view" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@drawable/btn_home"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.05"
...
