...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/btn_home"
...

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_pick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/btn_home"
...

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_breach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/btn_home"
...
