...
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_description" />
        <Constraint
            android:id="@+id/btn_update_1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_update_0" />
...
