...
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_flash" />

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:contentDescription="Настройки"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_scan_flash"
...
